<resources>
    <string name="app_name">AZEXPROJ</string>
    <string name="title_activity_treatment">Activity Treatment</string>
    <string name="action_settings">Settings</string>
    <string name="google_maps_key">AIzaSyDgogz9T_Ntz10ky2B3rkbPX6EWNcWZQZQ</string>
    <string name="title_activity_maps2">Map</string>
    <string name="treet">تعـامل</string>
    <string name="moti">تحفيــز</string>
    <string name="map">أمـاكن</string>
    <string name="games">ألعاب</string>
    <string name="active">فعاليات</string>
    <string name="aboutUs">عنــــا</string>
    <string name="desc">logo_main</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>


</resources>


